Add 10X10 data model